application/basic/service.yaml
# kubectl -n exercise apply -f service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: exercise-app
  labels:
    app: exercise-app
spec:
  selector:
    app: exercise-app
  ports:
    - protocol: TCP
      port: 80 # port of service
      targetPort: 3000 # port of application/pod
