application/basic/statefulset.yaml
# kubectl -n exercise apply -f statefulset.yaml
# connect: mongosh --host mongo-0.mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      role: mongo
      environment: exercise
  serviceName: "mongo"
  replicas: 3
  template:
    metadata:
      labels:
        role: mongo
        environment: exercise
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo
        command:
          - mongod
          - "--replSet"
          - rs0
          - "--bind_ip"
          - "0.0.0.0"
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
      - name: mongo-sidecar
        image: cvallance/mongo-k8s-sidecar
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        storageClassName: "microk8s-hostpath"
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    role: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-read
  labels:
    name: mongo-read
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    type: read

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-primary
  labels:
    name: mongo-primary
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    type: primary
